# TinySTL

./: .gitignore  CMakeLists.txt  README.md  setup_gtest.bat  setup_gtest.ps1  setup_gtest.sh
dev/: all_headers.cpp
examples/: CMakeLists.txt  hashtable_examples.cpp  unordered_map_examples.cpp
include/: CMakeLists.txt  algobase.h  allocator.h  construct.h  iterator.h  memory.h  type_traits.h  uninitialized.h  utility.h  vector.h
include/__algorithm/: copy.h
include/__iterator/: advance.h  distance.h
include/__memory/: allocator.h  construct.h  uninitialized_algorithms.h
include/__type_traits/: enable_if.h  integral_constant.h  is_integral.h  is_pod.h  is_same.h  is_trivially_assignable.h  is_trivially_constructible.h  is_trivially_copyable.h  is_trivially_destructible.h  remove_reference.h
include/__utility/: move.h
include/mystl/: __hash_table.h  algorithm.h  deque.h  functional.h  iterator.h  list.h  memory.h  string.h  type_traits.h  unordered_map.h  utility.h  vector.h
include/mystl/__algorithm/: copy.h
include/mystl/__functional/: function.h
include/mystl/__iterator/: advance.h  distance.h  iterator.h  iterator_traits.h
include/mystl/__memory/: allocator.h  construct.h  shared_ptr.h  split_buffer.h  uninitialized_algorithms.h  unique_ptr.h
include/mystl/__type_traits/: integral_constant.h  is_assignable.h  is_constructible.h  is_integral.h  is_nothrow_constructible.h  is_pod.h  is_same.h  is_trivially_assignable.h  is_trivially_constructible.h  is_trivially_copyable.h  is_trivially_destructible.h  is_void.h  remove_cv.h
include/mystl/__utility/: declval.h  forward.h  move.h  swap.h
note/construct/: 标签分发.md
note/iterator/function/: distance_type.md
note/memory/: memory_order.md  rebind.md  static_cast.md
note/type_traits/: SFINAE.md  constexpr.md  std::move.md  平凡析构函数.md  模板全特化.md
note/type_traits/function/: is_integral<T>.md  is_trivially_copy_assignable.md  is_trivially_copy_constructible.md  is_trivially_destructible.md
note/语言特性/: ODR.md  Placement New.md  declval.md  typename.md  五三零法则.md  列表初始化.md  右值引用与移动语义.md  完美转发.md  模板类型推导.md
note/语言特性/转发引用/: 引用折叠.md  转发引用.md
test/: CMakeLists.txt  deque_test.cpp  iterator_test.cpp  list_test.cpp  string_test.cpp  test.cpp  type_traits_test.cpp  unordered_map_test.cpp  utility_test.cpp  vector_test.cpp
test/algorithm/: copy_test.cpp
test/functional/: function_test.cpp
test/memory/: memory_test.cpp  shared_ptr_test.cpp  split_buffer_test.cpp  unique_ptr_test.cpp
test/type_traits/: is_integral_test.cpp  is_same_test.cpp  is_void_test.cpp  remove_reference_test.cpp
